# telescrap-sr

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.admin  Dockerfile.ci  Makefile  README.md  config_scan.json  config_scan.json.example  docker-compose.yml
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml
crates/admin-panel/: Cargo.toml  README.md
crates/admin-panel/src/interface/: admin_panel.rs  mod.rs
crates/db-reader/: Cargo.toml
crates/db-reader/.cargo/: config.toml
crates/db-reader/src/: main.rs
crates/filter/: Cargo.toml  README.md
crates/filter/src/: main.rs
crates/filter/src/filter/: aggressive_chain.rs  filter.rs  filter_chain.rs  mod.rs  rule.rs
crates/parser/: Cargo.toml  README.md
crates/parser/src/: lib.rs  main.rs
crates/parser/src/controller/: encounter_store.rs  html_extract.rs  mod.rs
crates/scanner/: Cargo.toml  README.md
crates/scanner/src/: lib.rs  main.rs
crates/scanner/src/app/: diff.rs  mod.rs  scan_task.rs
crates/scanner/src/controller/: notify.rs
crates/scanner/src/core/: config_file.rs  mod.rs  scan.rs
crates/scanner/src/interface/: mod.rs  runner.rs
crates/scanner/src/interface/notifiers/: console.rs
crates/telegram-notifier/: Cargo.toml  README.md
crates/telegram-notifier/src/: lib.rs  main.rs  mod.rs  notifier.rs
doc/: ARCHITECTURE.md  SERVER_INSTALLATION.md
src/: main.rs  parser.rs  telegram.rs
src/bot/: mod.rs
src/log/: mod.rs
src/parser/: calendar.rs  link_sources.toml  mod.rs
src/telegram/: commands.rs  mod.rs
(+26 files in other folders)
