[package]
name = "scanner"
version = "0.1.0"
edition = "2024"

[dependencies]
parser = { path = "../parser" }
filter = { path = "../filter" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
